<resources>
    <string name="default_media_location_folder">Parts Eazy</string>
    <string name="please_wait">Please wait ...</string>
    <string name="welcome_partseazy">Welcome to Parts Eazy</string>
    <string name="screen_message">End-to-end e-commerce for\n WholeSale buying  selling</string>
    <string name="welcome_partseazy_message">MULTI-BRAND SPARE PARTS PLATFORM</string>
    <string name="enter_mobile">Enter Your Mobile Number</string>
    <string name="invalid_number">Invalid Mobile Number</string>
    <string name="enter_otp">Please Enter OTP</string>
    <string name="submit_otp">Confirm OTP</string>
    <string name="continue_caps">continue</string>
    <string name="complete">complete</string>
    <string name="thanks_verify_phone">Thanks for verifying your no.</string>
    <string name="business_type">Select Business Type</string>
    <string name="business_name">Business Name</string>
    <string name="company_name_caps">COMPANY NAME</string>
    <string name="shop_name">Shop Name</string>
    <string name="full_name">Your Name</string>
    <string name="email">Email Address</string>
    <string name="invite_code_caps">INVITATION CODE</string>
    <string name="shop_name_caps">SHOP NAME</string>
    <string name="name_caps">YOUR NAME</string>
    <string name="email_caps">EMAIL ADDRESS (Optional)</string>
    <string name="proceed">PROCEED</string>
    <string name="shop_size">Size of Shop</string>
    <string name="select_shop_area">Select your shop area (sqft)</string>
    <string name="max_area">1000+sq</string>
    <string name="min_area">100sq</string>
    <string name="square_unit">sq</string>
    <string name="country_code">+91- </string>
    <string name="shipping_landmark">Landmark : %1$s </string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="luxury">Luxury</string>
    <string name="done_go_to_score">DONE! GO TO SCORE</string>
    <string name="Rs">\u20B9</string>
    <string name="txtErrNoConnection">There is no connection</string>
    <string name="txtSetting">Please check your internet settings</string>
    <string name="splash_title">India\'s Largest platform of Retailers and Suppliers</string>
    <string name="errorMessage">"Something went wrong, please try again"</string>
    <string name="err_somthin_wrong">"Something went wrong, please try again"</string>
    <string name="parsingErrorMessage">"Something went wrong in parsing data"</string>
    <string name="tryAgain">Try Again</string>
    <string name="basic_information">Basic Information</string>
    <string name="tell_us">Tell us</string>
    <string name="great">Great!</string>
    <string name="what_product_sell">What product you are selling?</string>
    <string name="what_sku_you_sell">What is your SKU selling price?</string>
    <string name="provide_basic_details">Provide your basic details </string>
    <string name="item_you_sell">ITEMS YOU SELL</string>
    <string name="sku_you_sell">SKU YOU SELL</string>
    <string name="err_invite_code_msg">Enter valid Invitation Code</string>
    <string name="err_name_msg">Enter your Full Name</string>
    <string name="err_email_msg">Enter valid Email</string>
    <string name="err_shop_msg">Enter valid Shop Name</string>
    <string name="err_pincode_msg">Enter valid Pincode</string>
    <string name="err_company_name">Enter valid Company Name</string>
    <string name="send_otp">Sending OTP ...</string>
    <string name="otp_text">Please enter the OTP for verification </string>
    <string name="cod_otp_text">Enter the verification code sent to %1$s</string>
    <string name="otp_text_number">Enter the verification code sent to %1$s </string>
    <string name="epay_otp_text_number">Please enter the verification code </string>
    <string name="mobile_number"> %1$s </string>
    <string name="otp_not_recieved">Didn\'t receive a code? \nPlease wait %1$s </string>
    <string name="wrong_otp">Wrong OTP, Please check again</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="loading">Loading  ...</string>
    <string name="cart_name">My Cart</string>
    <string name="checkout">Checkout</string>
    <string name="total_paybal">Total Payable</string>
    <string name="verification_code">Verification Code</string>
    <string name="thanks">Thanks</string>
    <string name="please_select_product">Please select atleast one product !</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="have_a_promotional_code">HAVE A PROMOTIONAL CODE?</string>
    <string name="mobile">Mobile Number</string>
    <string name="PAN_number">PAN Number</string>
    <string name="busines_PAN_number">Business PAN Number</string>
    <string name="shop_estd_num">Shop Establishment number(Optional)</string>
    <string name="address">Address</string>
    <string name="landmark">Landmark</string>
    <string name="town_city">Town/City</string>
    <string name="state">State</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="education">Education</string>
    <string name="add_newaddress">Add New Address</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="continue_btn">Continue</string>
    <string name="select_gender">Select Gender</string>
    <string name="required_field">Fill all fields..</string>
    <string name="empty_cart">Your Cart is empty</string>
    <string name="countinue_shopping">Continue Shopping</string>
    <string name="cart_message">Now enjoy free shipping !!!</string>
    <string name="qty">Qty : %1$s</string>
    <string name="margin">Discount : %1$s%%</string>
    <string name="code">Code : %1$s</string>
    <string name="moq">MOQ : %1$s</string>
    <string name="sample_item">Sample Item</string>
    <string name="MRP">MRP : \u20B9 %1$d</string>
    <string name="MRP_Price">\u20B9 %1$s</string>
    <string name="MOP">MOP : \u20B9 %1$d</string>
    <string name="rs">\u20B9 %1$d </string>
    <string name="rs_str">\u20B9 %1$s </string>
    <string name="order_sample_product">Order Samle product</string>
    <string name="call_to_order">Call to Order</string>
    <string name="max_price"><strike>\u20B9</strike> %1$s</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="out_of_stock_error_msg">Out of Stock</string>
    <string name="OK">OK</string>
    <string name="call_us">Call us</string>
    <string name="updated_qty">Quantity updated</string>
    <string name="update_cart">Updating Cart Items</string>
    <string name="cart_update_error">Can\'t increase quantity, stock limit reached</string>
    <string name="reconnect">Please wait. We are trying to reconnect.</string>
    <string name="remove_cart_item_message">Do you really want to remove this item from your Cart?></string>
    <string name="cart_remove_message">Remove item or add to favourite to buy later</string>
    <string name="move_wishlist">Move to favourites</string>
    <string name="remove">Remove</string>
    <string name="reload_cart">Reloading Cart Items</string>
    <string name="cart_value_pager">Cart (%1$d)</string>
    <string name="fav_value_pager">Favourite (%1$d)</string>
    <string name="change_delivery_address"><![CDATA[Change Delivery Address  >]]></string>
    <string name="payment">PAYMENT</string>
    <string name="address_cap">ADDRESS</string>
    <string name="complete_cap">COMPLETE</string>
    <string name="payment_header">Payments</string>
    <string name="order_review">Order Review</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="discounts_coupons">Discounts &amp; Coupons</string>
    <string name="product_details">Product Details</string>
    <string name="supplier_info">Supplier Info</string>
    <string name="similar_product">Similar Products</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="action_home_title">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="action_myaccount_title">My Account</string>
    <string name="action_myOrders">My Orders</string>
    <string name="action_fav_title">Favourites</string>
    <string name="txt_CustomerCare">Customer Care</string>
    <string name="sort_text">Sort</string>
    <string name="filter_text">filter</string>
    <string name="contact_supplier">Contact Supplier</string>
    <string name="supplier_query">Write your query for further specification of product ...</string>
    <string name="want_to_leave">Are you want to leave this page? Any information entered will be lost.</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="warning">Warning</string>
    <string name="want_to_delete_image">Are you want to delete this Image?</string>
    <string name="return_policy">Return Policy</string>
    <string name="stock_correction">Stock Correction</string>
    <string name="see_more">See More</string>
    <string name="MOQ">MOQ : %1$d %2$s </string>
    <string name="MOQ_Pack_contains">MOQ : %1$d pack | Pack contains: %2$d piece  </string>
    <string name="MOQ_no_Pack_contains">MOQ : %1$d piece </string>
    <string name="min_qty">Min Qty :%1$d %2$s </string>
    <string name="terms_condition"> Terms and  Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="FAQ">FAQ</string>
    <string name="about_us">About us</string>
    <string name="find_retailer">Find Retailer</string>
    <string name="contact_us">Contact Us</string>
    <string name="search_by_number">Enter Mobile number </string>
    <string name="order_failed_text">Sorry, Something went wrong.\n Please try again</string>
    <string name="order_failed_subtitle">For more information call us at: %1$s or email us at: %2$s</string>
    <string name="updateAvailable">Update Available</string>
    <string name="new_version_download">Newer version is available to download</string>
    <string name="remind_later">Remind me later</string>
    <string name="update_now">Update it now</string>
    <string name="single_sku">Single Sku</string>
    <string name="multiple_sku">Multiple Sku</string>
    <string name="payment_option">Payment Option</string>
    <string name="order_only_pay_later">Order Only, Pay Later(Only to your Invited Contacts)</string>
    <string name="prepaid_optiom">Prepaid ( CC, DB, NB)</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="partseazy_assurance_des">Yes, Offer the Parts Eazy Assurance</string>
    <string name="save_continue"><![CDATA[Save & Continue]]></string>
    <string name="partseazy_assurance">Parts Eazy Assurance</string>
    <string name="know_more">Know More</string>
    <string name="terms_assurance">I agree to offer Parts Eazy Assurance coverage that means the supplier  will fulfill their end of the contract, or Parts Eazy will refund buyer for  the covered amoun</string>
    <string name="new_sku">+ New SKU</string>
    <string name="send_link">Send Link</string>
    <string name="steps_to_use">Steps to use</string>
    <string name="consumer_finance_step_1">Enter customer mobile number and send registration link.</string>
    <string name="consumer_finance_step_2">Customer registers on EpayLater webpage with basic details and get a valid credit limit.</string>
    <string name="consumer_finance_step_3">Go to \'Create Order\' and place an order for the customer using their registered mobile number.</string>
    <string name="consumer_finance_step_4">Once purchase is completed, the amount will directly be sent to your account.</string>
    <string name="change_language">Change Language</string>
    <string name="change_category">Change category</string>
</resources>