<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/margin10LeftRight"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin10"
    android:layout_marginTop="@dimen/margin10"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/myCategoryRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/myCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding10"
            android:text="@string/change_category"
            android:textColor="@color/black"
            android:textSize="@dimen/text_17" />

        <ImageView
            android:id="@+id/myCategoryIV"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:tint="@color/colorPrimary"
            android:src="@drawable/applozic_ic_action_settings" />

    </RelativeLayout>
    <TextView
        android:id="@+id/changeLanguageTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding10"
        android:text="@string/change_language"
        android:textColor="@color/black"
        android:textSize="@dimen/text_17" />

    <TextView
        android:id="@+id/contactUsTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding10"
        android:text="@string/contact_us"
        android:textColor="@color/black"
        android:textSize="@dimen/text_17" />


    <TextView
        android:id="@+id/termsConditionTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding10"
        android:text="@string/terms_condition"
        android:textColor="@color/black"
        android:textSize="@dimen/text_17" />

    <TextView
        android:id="@+id/privacyPolicyTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding10"
        android:text="@string/privacy_policy"
        android:textColor="@color/black"
        android:textSize="@dimen/text_17" />

    <TextView
        android:id="@+id/faqTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding10"
        android:text="@string/FAQ"
        android:textColor="@color/black"
        android:textSize="@dimen/text_17" />

    <TextView
        android:id="@+id/aboutUsTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding10"
        android:text="@string/about_us"
        android:textColor="@color/black"
        android:textSize="@dimen/text_17" />
    <TextView
        android:id="@+id/findRetailerTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding10"
        android:text="@string/find_retailer"
        android:textColor="@color/black"
        android:textSize="@dimen/text_17" />


</LinearLayout>
