<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/newUpdateTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:padding="10dp"
        android:text="@string/updateAvailable"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:padding="@dimen/padding_Large"
        android:text="@string/new_version_download"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/txv_remind_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/secondary_button"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/remind_later"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/txv_update_now"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/styleCheckoutButton"

            android:gravity="center"
            android:padding="10dp"
            android:text="@string/update_now"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>