<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG">

    <include layout="@layout/toolbar" />

    <TextView
        android:id="@+id/order_failed_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin15"
        android:gravity="center"
        android:padding="@dimen/padding_medium"
        android:text="@string/order_failed_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/order_failed_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/order_failed_title"
        android:padding="@dimen/padding_medium"
        android:text="@string/order_failed_subtitle"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black" />


    <Button
        android:id="@+id/btn_view_cart"
        style="@style/styleSubmitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:text="@string/countinue_shopping" />
</RelativeLayout>